syntax = "proto3";
package node;

service NodeService {
	rpc Set (SetRequest) returns (SetResponse);
	rpc Join (JoinRequest) returns (JoinResponse);
}

message SetRequest {
	string key = 1;
	string val = 2;
}

message SetResponse {}

message JoinRequest {
	string ip = 1;
}

message JoinResponse {
	string succ_ip = 1;
	repeated bytes keys = 2;
	repeated string vals = 3;

}
